updating cart to clear the cart items after the order creation
