# static/swagger.json
@@ -60,50 +60,60 @@
         }
       }
     },
-    "/cart/{cart_id}": {
+    "/cart/{product_id}": {
+      "put": {
+          "summary": "Update Cart Item Quantity",
+          "parameters": [
+            {
+              "name": "product_id",
+              "in": "path",
+              "required": true,
+              "schema": { "type": "string", "format": "uuid" }
+            }
+          ],
+          "requestBody": {
+            "required": true,
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/CartItemUpdate" }
+              }
+            }
+          },
+          "responses": {
+            "200": {
+              "description": "Cart item updated",
+              "content": {
+                "application/json": {
+                  "schema": { "$ref": "#/components/schemas/Cart" }
+                }
+              }
+            }
+          }
+        } 
+    },  
+    "/cartItems": {
       "delete": {
         "summary": "Remove Item from Cart",
-        "parameters": [
-          {
-            "name": "cart_id",
-            "in": "path",
-            "required": true,
-            "schema": { "type": "string", "format": "uuid" }
-          }
-        ],
-        "responses": {
-          "200": { "description": "Item removed from cart" }
-        }
-      },
-      "put": {
-        "summary": "Update Cart Item Quantity",
-        "parameters": [
-          {
-            "name": "cart_id",
-            "in": "path",
-            "required": true,
-            "schema": { "type": "string", "format": "uuid" }
-          }
-        ],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
-              "schema": { "$ref": "#/components/schemas/CartItemUpdate" }
+              "schema": { "$ref": "#/components/schemas/RemoveFromCart" }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Cart item updated",
+            "description": "Cart items for the user",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/Cart" }
+                "schema": { "$ref": "#/components/schemas/RemoveCartItemResponse" }
               }
             }
           }
         }
       }
+      
     },
     "/orders": {
       "post": {
@@ -157,7 +167,7 @@
           "required": true,
           "content": {
             "application/json": {
-              "schema": { "$ref": "#/components/schemas/Order" }
+              "schema": { "$ref": "#/components/schemas/UpdateOrder" }
             }
           }
         },
@@ -228,6 +238,31 @@
           "unit_price": { "type": "number", "format": "float" }
         }
       },
+      "RemoveFromCart": {
+        "type": "object",
+        "properties": {
+          "user_id": { "type": "string" },
+          "products": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
+      "RemoveCartItemResponse": {
+        "type": "object",
+        "properties": {
+          "message": { "type": "string" },
+          "products": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
+      },
+
       "CartItemUpdate": {
         "type": "object",
         "properties": {
@@ -235,15 +270,19 @@
         },
         "required": ["quantity"]
       },
+      "UpdateOrder": {
+        "type": "object",
+        "properties": {
+          "user_id": { "type": "string" },
+          "order_status": { "type": "string" }
+        },
+        "required": ["user_id", "order_status"]
+      },
       "Order": {
         "type": "object",
         "properties": {
           "user_id": { "type": "string" },
           "total_amount": { "type": "number", "format": "float" },
-          "order_status": {
-            "type": "string",
-            "enum": ["pending", "shipped", "delivered", "cancelled"]
-          },
           "shipping_address": { "type": "string" },
           "order_items": {
             "type": "array",
